# mycir_agent_using_ADK

./: .env.example  .gitignore  README.md  docker-compose.yml  export_data.py  main.py  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml
capex_agent/: agent.py
capex_agent/data/: system_price.csv
capex_agent/sub_agents/capex_estimation/: agent.py  tools.py
capex_agent/sub_agents/market_research/: agent.py
cir_old_manual_flow_docs/capex/: 251029_Indicative Capex Check List_V0_SS.xlsx  251119_CAPEX_Marengo_INT_V0.SS.xlsx  251217_Indicative Capex Check List_V0_SS_SV.xlsx
cir_old_manual_flow_docs/capex/IGS/: 251112_CAPEX_River Valley Recycling_EXT_V0.SS.xlsx  251112_CAPEX_River Valley Recycling_INT_V0.SS.xlsx  251119_CAPEX_Mansfield Industries_INT_V0.SS .xlsx  251119_CAPEX_Marengo_EXT_V0.SS.xlsx  251119_CAPEX_Radiac Abrasives_INT_V0.SS .xlsx  251119_CAPEX_Viscofan_EXT_V0.SS.xlsx  251119_CAPEX_Viscofan_INT_V0.SS - Copy.xlsx  251120_CAPEX_Mansfield Industries_EXT_V0.SS .xlsx  251121_CAPEX_Dayton Airport_EXT_V0.SS.xlsx  (+13 more)
docker/: init.sql  pgadmin_servers.json
docs/: 01_project_overview.md  02_architecture_v2.md  03_agent_specifications.md  04_engineering_logic.md  05_v1_lessons_learned.md  06_benchmark_validation.md  07_adk_technical_design.md  08_compliance_regulatory.md  09_hosting_and_feedback.md  09_pricing_database.md  README.md
mycir_agent/: agent.py  config.py
scripts/: extract_historical_data.py  historical_data_extract.json  historical_data_extract.txt  import_pricing_from_excel.py
(+19 files in other folders)
